attempt to fix x overflow on >320px screens

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -50,6 +50,7 @@ body {
     grid-template-rows: auto auto 1fr auto auto;
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
 }
 
 .header {
